[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/Drone/Cacodaemon Sprite Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Drone/Drone.gd" type="Script" id=2]
[ext_resource path="res://assets/SFX/Fish_Explosion.wav" type="AudioStream" id=3]
[ext_resource path="res://Scripts/Shared/AcidSpawner.gd" type="Script" id=4]
[ext_resource path="res://Nodes/Shared/AcidBullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Nodes/Drone/Explosion.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/SFX/FishShootingq.wav" type="AudioStream" id=7]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 13.0

[sub_resource type="CircleShape2D" id=25]
radius = 19.0263

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Alert",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "Death",
"speed": 8.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Idle",
"speed": 7.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "Shoot",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=26]
radius = 56.0089

[node name="Alien" type="RigidBody2D"]
collision_layer = 128
collision_mask = 155
mass = 0.00102041
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
angular_damp = 100.0
script = ExtResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
scale = Vector2( 8, 8 )

[node name="rays" type="Node2D" parent="."]

[node name="Ray1" type="RayCast2D" parent="rays"]
scale = Vector2( 1, 2 )

[node name="Ray2" type="RayCast2D" parent="rays"]
rotation = 1.5708
scale = Vector2( 1, 2 )

[node name="Ray3" type="RayCast2D" parent="rays"]
rotation = 3.14159
scale = Vector2( 1, 2 )

[node name="Ray4" type="RayCast2D" parent="rays"]
rotation = -1.5708
scale = Vector2( 1, 2 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.313726, 1, 0, 1 )
position = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 2 )
shape = SubResource( 25 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimTimer" type="Timer" parent="."]

[node name="SleepTimer" type="Timer" parent="."]

[node name="Gun" type="Node" parent="."]
script = ExtResource( 4 )
bulletScene = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 24 )
animation = "Shoot"
frame = 2

[node name="Particles2D" parent="." instance=ExtResource( 6 )]
emitting = false
one_shot = true

[node name="ExplosionWave" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
monitoring = false
monitorable = false

[node name="Shape" type="CollisionShape2D" parent="ExplosionWave"]
shape = SubResource( 26 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="viewport_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_viewport_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_Shoot_Timer_timeout"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AnimTimer" to="." method="_on_AnimTimer_timeout"]
[connection signal="timeout" from="SleepTimer" to="." method="_on_SleepTimer_timeout"]
